[package]
name = "fn-cache"
version = "0.3.0"
description = "A copy-less and clone-less function caching library"

documentation = "https://docs.rs/fn-cache"
repository = "https://github.com/asampley/fn_cache"
readme = "README.md"

keywords = ["cache", "memoization"]
categories = ["caching"]

authors = ["Alex Sampley <sampley@ualberta.ca>"]
license = "MIT"
edition = "2018"

[dev-dependencies]
num-bigint = "0.2"
