[package]
name = "fn-cache"
version = "1.0.0"
description = "A copy-less and clone-less function caching library"

documentation = "https://docs.rs/fn-cache"
repository = "https://github.com/asampley/fn_cache"
readme = "README.md"

keywords = ["cache", "memoization"]
categories = ["caching"]

authors = ["Alex Sampley <alex.sampley@gmail.com>"]
license = "MIT"
edition = "2021"

[dev-dependencies]
num-bigint = "0.4"
hashers = "1.0.1"
once_cell = "1.17.0"
